--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,8 +3,11 @@ owner: exploswell
 repo: upptime
 
 sites:
-  - name: Google
-    url: https://www.google.com
+  - name: NeuralinkAI_Graph_ENG
+    url: https://wherestechsupport.com/response.html
+
+  - name: WhatsApp_Graph_RU
+    url: https://ngovietco.com/response.html
 
   - name: WhAppRu
     url: https://djgtdensloaa.com/response.html
