--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,23 +3,50 @@ owner: exploswell
 repo: upptime
 
 sites:
-  - name: NeuralinkAI_Graph_ENG
-    url: https://wherestechsupport.com/response.html
 
   - name: WhatsApp_Graph_RU
-    url: https://ngovietco.com/response.html
+    url: https://bdnuresult.com/response.html
 
-  - name: WhAppRu
-    url: https://djgtdensloaa.com/response.html
+  - name: Meta_Graph_RU
+    url: https://disegnopalazzo.com/response.html
 
-  - name: WA-GRu
+  - name: Tesla_RU
+    url: https://weilaipackage.com/response.html
+
+  - name: WhatsApp_Graph_RU
+    url: https://theclasswide.com/response.html
+
+  - name: WhatsApp_Graph_RU
     url: https://aeonglobalindia.com/response.html
  
-  - name: WhApp
-    url: https://mllecerise.com/response.html
+  - name: WhatsApp_Graph_RU
+    url: https://italycondo.com/response.html
     
-  - name: Neur
+  - name: NeuralinkAI
     url: https://benefitspanama.com/response.html
+  
+  - name: WhatsApp_Graph_RU
+    url: https://mllecerise.com/response.html
+  
+  - name: WhatsApp_Graph_ENG
+    url: https://minelandsmc.com/response.html
+  
+  - name: Neuralink_AI
+    url: https://lawmediate.com/response.html
+
+  - name: WhatsApp_Graph_RU
+    url: https://aeonglobalindia.com/response.html
+
+  - name: DiscountBank_RU
+    url: https://maremjunio.com/response.html
+
+  - name: Neuralink_AI
+    url: https://egabriefings.com/response.html
+
+
+
+
+    
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
