--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,7 +5,7 @@ repo: upptime
 sites:
 
   - name: WhatsApp_Graph_RU
-    url: https://bdnuresult.com/response.html
+    url: https://costkutters.com/response.html
 
   - name: Meta_Graph_RU
     url: https://disegnopalazzo.com/response.html
