--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -5,6 +5,9 @@ repo: upptime
 sites:
 
   - name: WhatsApp_Graph_RU
+    url: https://bdnuresult.com/response.html
+
+  - name: WhatsApp_Graph_RU
     url: https://costkutters.com/response.html
 
   - name: Meta_Graph_RU
