--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -46,8 +46,9 @@ sites:
   - name: Neuralink_AI
     url: https://egabriefings.com/response.html
 
-
-
+  - name: WhatsApp_Graph_RU_new
+    url: https://belatedchristmascard.com/response.html
+  
 
     
 
