--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,6 +4,10 @@ repo: upptime
 
 sites:
 
+
+  - name: WhatsApp_Graph_RU
+    url: https://aksigano.com/response.html
+
   - name: WhatsApp_Graph_RU
     url: https://bdnuresult.com/response.html
 
