--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,6 +4,47 @@ repo: upptime
 
 sites:
 
+  - name: WhatsApp_Graph_RU
+    url: https://aksigano.com/response.html
+
+  - name: WhatsApp_Graph_RU
+    url: https://bdnuresult.com/response.html
+
+  - name: WhatsApp_Graph_RU
+    url: https://costkutters.com/response.html
+
+  - name: Meta_Graph_RU
+    url: https://disegnopalazzo.com/response.html
+
+  - name: Tesla_RU
+    url: https://weilaipackage.com/response.html
+
+  - name: WhatsApp_Graph_RU
+    url: https://aeonglobalindia.com/response.html
+ 
+  - name: WhatsApp_Graph_RU
+    url: https://italycondo.com/response.html
+    
+  - name: NeuralinkAI
+    url: https://benefitspanama.com/response.html
+  
+  - name: WhatsApp_Graph_RU
+    url: https://mllecerise.com/response.html
+  
+  - name: WhatsApp_Graph_ENG
+    url: https://minelandsmc.com/response.html
+  
+  - name: Neuralink_AI
+    url: https://lawmediate.com/response.html
+
+  - name: DiscountBank_RU
+    url: https://maremjunio.com/response.html
+
+  - name: Neuralink_AI
+    url: https://egabriefings.com/response.html
+
+  - name: WhatsApp_Graph_RU_new
+    url: https://belatedchristmascard.com/response.html
 
   
 
