--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -4,6 +4,20 @@ repo: upptime
 
 sites:
 
+  - name: WhatsApp_Graph_RU
+    url: https://costkutters.com/response.html
+
+  - name: WhatsApp_Graph_RU
+    url: https://aeonglobalindia.com/response.html
+    
+  - name: WhatsApp_Graph_RU
+    url: https://mllecerise.com/response.html
+    
+  - name: NeuralinkAI
+    url: https://benefitspanama.com/response.html
+  
+  - name: Neuralink_AI
+    url: https://lawmediate.com/response.html
  
   
 
